Added reset action to the game

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 				</div>
 				</div>
 			</div> <!-- close the table -->
+			<div class="alert"></div>
 		</div> <!-- close the main row -->
 			
 	</div> <!-- close the container -->
