Added button for manual reset option

--- a/index.html
+++ b/index.html
@@ -79,8 +79,12 @@
 					</div><!-- End player cards -->
 				</div><!-- end player wrapper -->
 			</div> <!-- end player row -->
+
 			<div class="row player-actions">
-				<div class="col-sm-2 col-sm-offset-2">
+				<div class="col-sm-2 col-sm-offset-1 reset">
+					<button class="reset">Reset</button>
+				</div>
+				<div class="col-sm-2 col-sm-offset-1">
 					<button class="deal-button">Deal</button>
 				</div>
 				<div class="col-sm-2 col-sm-offset-1">
@@ -89,7 +93,8 @@
 				<div class="col-sm-2 col-sm-offset-1">
 					<button class="stand-button">Stand</button>
 				</div>
-				</div>
+			</div> <!-- close player-action/buttons -->
+
 			</div> <!-- close the table -->
 			<div class="alert"></div>
 		</div> <!-- close the main row -->
