Added changes from pair programming

--- a/index.html
+++ b/index.html
@@ -81,9 +81,6 @@
 			</div> <!-- end player row -->
 
 			<div class="row player-actions">
-				<div class="col-sm-2 col-sm-offset-1 reset">
-					<button class="reset">Reset</button>
-				</div>
 				<div class="col-sm-2 col-sm-offset-1">
 					<button class="deal-button">Deal</button>
 				</div>
@@ -93,7 +90,16 @@
 				<div class="col-sm-2 col-sm-offset-1">
 					<button class="stand-button">Stand</button>
 				</div>
+				<div class="col-sm-2 col-sm-offset-1 reset">
+					<button class="reset">Reset</button>
+				</div>
 			</div> <!-- close player-action/buttons -->
+			<div class="row betting col-sm-8">
+					<div class="col-sm-2 col-sm-offset-1">
+						<img class="chips" src="images/chip.jpg" value=1>
+						<div class="col-sm-2 col-sm-off-set-1 bank-display"></div>
+					</div>
+			</div>
 
 			</div> <!-- close the table -->
 			<div class="alert"></div>
