Column changes for the Bank Display

--- a/index.html
+++ b/index.html
@@ -94,11 +94,10 @@
 					<button class="reset">Reset</button>
 				</div>
 			</div> <!-- close player-action/buttons -->
-			<div class="row betting col-sm-8">
-					<div class="col-sm-2 col-sm-offset-1">
-						<img class="chips" src="images/chip.jpg" value=1>
-						<div class="col-sm-2 col-sm-off-set-1 bank-display"></div>
-					</div>
+			<div class="row betting col-sm-12">
+					<div class="col-sm-4 col-sm-offset-2">
+						<img class="chips" src="images/chip.jpg" value=1></div>
+						<div class="col-sm-4 col-sm-offset-2 bank-display"></div>
 			</div>
 
 			</div> <!-- close the table -->
